Margin and gaps fixed and <strong> style added.

--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ p {
 }
 .linkname {
   font-size: 19px;
+  margin: 0;
 }
 
 .description a {
